# phosphor-ipmi-flash

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  LICENSE  MAINTAINERS  Makefile.am  OWNERS  README.md  bmc_json_config.md  bootstrap.sh  configure.ac  data.hpp  data_handler.hpp  file_handler.cpp  file_handler.hpp  firmware_handler.cpp  firmware_handler.hpp  flags.hpp  flash-ipmi.cpp  flash-ipmi.hpp  groups  hash_handler.cpp  hash_handler.hpp  image_handler.hpp  ipmi.cpp  ipmi.hpp  ipmi_flash.md  lpc_aspeed.cpp  lpc_aspeed.hpp  lpc_handler.cpp  lpc_handler.hpp  lpc_interface.hpp  lpc_nuvoton.cpp  lpc_nuvoton.hpp  main.cpp  mapper_errors.hpp  meson.build  meson.options  meson_options.txt  (+19 more)
bmc/: Makefile.am  README.md  bios.json.in  buildjson.cpp  buildjson.hpp  config-bios.json.in  config-static-bmc-reboot.json.in  config-static-bmc-with-update-status.json.in  config-static-bmc.json.in  data_handler.hpp  file_handler.cpp  file_handler.hpp  firmware_handler.cpp  firmware_handler.hpp  fs.cpp  general_systemd.cpp  general_systemd.hpp  handler_config.hpp  image_handler.hpp  lpc_handler.hpp  main.cpp  mapper_errors.hpp  meson.build  net_handler.cpp  net_handler.hpp  pci_aspeed_handler.cpp  pci_handler.cpp  pci_nuvoton_handler.cpp  prepare_systemd.cpp  prepare_systemd.hpp  skip_action.cpp  skip_action.hpp  static-bmc-reboot.json.in  static-bmc.json.in  update_systemd.cpp  update_systemd.hpp  verify_systemd.cpp  verify_systemd.hpp  version_handler.cpp  version_handler.hpp
bmc/firmware-handler/: Makefile.am  data_handler.hpp  firmware_handler.cpp  firmware_handler.hpp  firmware_handlers_builder.cpp  firmware_handlers_builder.hpp  lpc_aspeed.cpp  lpc_aspeed.hpp  lpc_handler.cpp  lpc_handler.hpp  lpc_nuvoton.cpp  lpc_nuvoton.hpp  main.cpp  mapper_errors.hpp  meson.build  net_handler.cpp  net_handler.hpp  pci_handler.cpp  pci_handler.hpp  pci_nuvoton_handler.cpp  phosphor-ipmi-flash.conf
bmc/firmware-handler/test/: Makefile.am  crc_mock.hpp  create_action_map.hpp  data_mock.hpp  file_handler_unittest.cpp  firmware_canhandle_unittest.cpp  firmware_close_unittest.cpp  firmware_commit_unittest.cpp  firmware_handler_unittest.cpp  firmware_json_unittest.cpp  firmware_multiplebundle_unittest.cpp  firmware_open_unittest.cpp  firmware_sessionstat_unittest.cpp  firmware_unittest.hpp  (+12 more)
bmc/log-handler/: Makefile.am  log_handler.cpp  log_handler.hpp  log_handlers_builder.cpp  log_handlers_builder.hpp  main.cpp  meson.build
bmc/test/: Makefile.am  firmware_canhandle_unittest.cpp  firmware_close_unittest.cpp  firmware_commit_unittest.cpp  firmware_createhandler_unittest.cpp  firmware_handler_unittest.cpp  firmware_json_unittest.cpp  firmware_multiplebundle_unittest.cpp  firmware_open_unittest.cpp  firmware_sessionstat_unittest.cpp  firmware_stat_unittest.cpp  firmware_state_notyetstarted_tarball_unittest.cpp  firmware_state_notyetstarted_unittest.cpp  firmware_state_updatecompleted_unittest.cpp  firmware_state_updatepending_unittest.cpp  firmware_state_updatestarted_unittest.cpp  firmware_state_uploadinprogress_unittest.cpp  firmware_state_verificationcompleted_unittest.cpp  firmware_state_verificationpending_unittest.cpp  firmware_state_verificationstarted_unittest.cpp  firmware_unittest.hpp  firmware_write_unittest.cpp  firmware_writemeta_unittest.cpp  image_mock.cpp  image_mock.hpp  meson.build  triggerable_mock.cpp  triggerable_mock.hpp
bmc/version-handler/: Makefile.am  main.cpp  meson.build  version_handler.cpp  version_handler.hpp  version_handlers_builder.cpp  version_handlers_builder.hpp
cleanup/: Makefile.am  cleanup.cpp  cleanup.hpp  fs.cpp  fs.hpp  main.cpp  meson.build
cleanup/test/: cleanup_handler_unittest.cpp  filesystem_mock.hpp  meson.build
test/: Makefile.am  blob_interface_mock.hpp  bmc_update_mock.hpp  crc_mock.hpp  data_interface_mock.hpp  data_mock.hpp  file_handler_unittest.cpp  firmware_canhandle_unittest.cpp  firmware_close_unittest.cpp  firmware_commit_unittest.cpp  firmware_createhandler_unittest.cpp  firmware_delete_unittest.cpp  firmware_handler_unittest.cpp  firmware_open_unittest.cpp  firmware_sessionstat_unittest.cpp  firmware_stat_unittest.cpp  firmware_state_notyetstarted.cpp  firmware_state_notyetstarted_tarball_unittest.cpp  firmware_state_notyetstarted_unittest.cpp  firmware_state_updatecompleted_unittest.cpp  firmware_state_updatepending_unittest.cpp  firmware_state_updatestarted_unittest.cpp  firmware_state_uploadinprogress_unittest.cpp  firmware_state_verificationcompleted_unittest.cpp  firmware_state_verificationpending_unittest.cpp  firmware_state_verificationstarted_unittest.cpp  firmware_unittest.hpp  firmware_write_unittest.cpp  firmware_writemeta_unittest.cpp  flash_checkverify_unittest.cpp  flash_flashabort_unittest.cpp  flash_flashdata_unittest.cpp  flash_flashfinish_unittest.cpp  flash_hashdata_unittest.cpp  flash_hashfinish_unittest.cpp  flash_hashstart_unittest.cpp  flash_start_unittest.cpp  image_mock.hpp  internal_sys_mock.hpp  io_mock.hpp  (+23 more)
tools/: Makefile.am  blob_errors.hpp  blob_handler.cpp  blob_handler.hpp  blob_interface.hpp  bt.cpp  bt.hpp  crc.cpp  crc.hpp  handler.cpp  handler.hpp  helper.cpp  helper.hpp  interface.hpp  io.cpp  io.hpp  io_interface.hpp  ipmi.cpp  ipmi.hpp  ipmi_errors.hpp  ipmi_handler.cpp  ipmi_handler.hpp  ipmi_interface.hpp  ipmitool.c  ipmitool.h  lpc.cpp  lpc.hpp  main.cpp  meson.build  net.cpp  net.hpp  p2a.cpp  p2a.hpp  p2a_aspeed.cpp  p2a_nuvoton.cpp  pci.cpp  pci.hpp  pciaccess.cpp  pciaccess.hpp  progress.cpp  (+4 more)
tools/bt/: bt.cpp  bt.hpp
tools/interface/: interface.hpp
tools/ipmi/: raw.cpp  raw.hpp  updatehelper.cpp  updatehelper.hpp
tools/libs/: ipmitool.c  ipmitoolintf.c  ipmitoolintf.h
tools/test/: Makefile.am  blob_unittest.cpp  data_interface_mock.hpp  datainterface_mock.hpp  interface_mock.hpp  internal_sys_mock.hpp  io_mock.hpp  io_unittest.cpp  meson.build  pciaccess_mock.hpp  progress_mock.hpp  raw_mock.hpp  tools_bt_unittest.cpp  tools_helper_unittest.cpp  tools_lpc_unittest.cpp  tools_net_unittest.cpp  tools_pci_unittest.cpp  tools_updater_unittest.cpp  updater_mock.hpp
(+28 files in other folders)
